# equities-narrative-tracker

./: .dockerignore  .env.example  .gitignore  Dockerfile  Procfile  README.md  docker-compose.yml  pyproject.toml  railway.json
docs/: Narrative-Tracker-User-Guide.docx  go-live-runbook.md  ui-mockup.html  ui-tweet.html
docs/brainstorms/: 2026-06-03-equities-narrative-tracker-brainstorm.md
docs/design/: 01-narrative-clustering.md  02-credibility-attribution.md  03-outcome-scorer.md  04-extraction-cascade.md  05-social-analytics.md  06-telegram-ux.md
docs/plans/: 2026-06-03-feat-equities-narrative-tracker-plan.md
scripts/: demo_full.py  demo_spine.py  seed_dashboard.py
src/narrative_tracker/: __init__.py  __main__.py  config.py  jobs.py  preflight.py  scheduler.py  text_utils.py  worker.py
src/narrative_tracker/admin/: __init__.py  bot.py  commands.py  export.py  service.py
src/narrative_tracker/analyze/: __init__.py  analyzer.py  digest.py  narratives.py  outcomes.py  pulse.py  sentiment.py  technicals.py
tests/: conftest.py  test_admin.py  test_alert_format.py  test_analyze.py  test_cashtag.py  test_conviction.py  test_credibility.py  test_dashboard.py  test_dedupe.py  test_explicit_calls.py  test_extraction.py  test_golive.py  test_idempotency.py  test_jobs.py  test_m10.py  test_m11.py  test_m12.py  test_mention_inference.py  test_ops.py  test_outcomes.py  test_pipeline.py  test_polling.py  test_polygon.py  test_pulse.py  test_recommend.py  test_relevance.py  test_scheduler.py  test_scorer.py  test_spine.py  test_stance_llm.py  test_telegram_channels.py
(+60 files in other folders)
