[project]
name = "narrative-tracker"
version = "0.0.1"
description = "Equities narrative tracker — X/Twitter → Telegram trade signals with a self-scoring feedback loop"
readme = "README.md"
requires-python = ">=3.12"

# Core deps are intentionally minimal + pure-Python where possible so the test
# suite installs cleanly on new Python versions and runs with zero credentials
# (correctness lives in Postgres unique constraints, which SQLite honors too).
dependencies = [
    "sqlalchemy[asyncio]>=2.0.36",
    "aiosqlite>=0.20.0",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
]

[project.optional-dependencies]
# Heavier / C-extension libs needed only to run against real services.
prod = [
    "asyncpg>=0.30.0",
    "aiogram>=3.13.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "redis>=5.2.0",
    "httpx>=0.27.0",
    "websockets>=13.0",
    # LLM path (stance / relevance gate / pulse brief) via instructor.from_provider
    "instructor[anthropic]>=1.8.0",
]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/narrative_tracker"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
